[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Chart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/PongPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/PongPlayer.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Score.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=6]
[ext_resource path="res://BalsamiqSans-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="PongPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( -66.0938, 333.114 )
scale = Vector2( 5, 5 )
script = ExtResource( 3 )

[node name="ScorePlayer" parent="." instance=ExtResource( 5 )]
position = Vector2( 40, 30 )

[node name="ScoreBot" parent="." instance=ExtResource( 5 )]
position = Vector2( 956, 30 )

[node name="Timer" type="Node2D" parent="."]
position = Vector2( 512, 30 )

[node name="Label" type="Label" parent="Timer"]
margin_left = -13.0788
margin_top = 1.58394
margin_right = 26.9212
margin_bottom = 32.5839
custom_fonts/font = SubResource( 1 )
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneticInfo" type="Node2D" parent="."]
position = Vector2( 439.53, 30 )

[node name="Generation" type="Label" parent="GeneticInfo"]
margin_left = -404.644
margin_top = 469.174
margin_right = -364.644
margin_bottom = 500.174
custom_fonts/font = SubResource( 1 )
text = "Generation: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestRating" type="Label" parent="GeneticInfo"]
margin_left = -404.644
margin_top = 498.174
margin_right = -249.644
margin_bottom = 529.174
custom_fonts/font = SubResource( 1 )
text = "Best Rating: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chart" parent="." instance=ExtResource( 1 )]
margin_left = 472.116
margin_top = 373.496
margin_right = 993.116
margin_bottom = 562.496
